[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
description = "Command-line utility for searching plain-text data sets for lines that match a regular expression"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
